--- a/styles/reset.css
+++ b/styles/reset.css
@@ -20,6 +20,7 @@ a {
   user-select: none;
   -webkit-user-select: none;
   -webkit-touch-callout: none;
+  font-family: inter, sans-serif;
 }
 
 input,
