--- a/frontend/components/LinesPage/LinesPage.module.css
+++ b/frontend/components/LinesPage/LinesPage.module.css
@@ -2,8 +2,9 @@
   display: flex;
   flex-direction: column;
   gap: var(--size-md);
-  padding: var(--size-lg);
-  background-color: var(--reference-0);
+  /* padding: var(--size-lg); */
+  /* background-color: var(--reference-0); */
+  background-color: var(--gray0);
 }
 
 .lineTitle {
