--- a/frontend/components/LinePatternDateSelector/LinePatternDateSelector.module.css
+++ b/frontend/components/LinePatternDateSelector/LinePatternDateSelector.module.css
@@ -7,27 +7,35 @@
 }
 
 .dateSelector {
-  display: flex;
-  flex-direction: row;
-  /* gap: var(--size-md); */
-  align-items: center;
-  justify-content: center;
-  background-color: var(--reference-0);
-  /* padding: var(--size-sm); */
+  display: grid;
+  grid-template-columns: repeat(3, 150px);
+  background-color: var(--gray1);
   border-radius: var(--size-sm);
-  border: 2px solid var(--gray2);
+  border: 2px solid var(--reference-1);
   box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.05);
   overflow: hidden;
+  background-color: var(--reference-0);
 }
 
 .button {
-  padding: var(--size-sm) var(--size-lg);
+  display: flex;
+  align-items: center;
+  justify-content: center;
   cursor: pointer;
   font-size: 18px;
-  font-weight: 500;
-  border-right: 2px solid var(--gray2);
+  font-weight: 600;
+  border-right: 2px solid var(--reference-1);
+  color: var(--reference-1);
+  transition: all 200ms ease;
 }
 
 .button:hover {
-  background-color: var(--gray0);
+  color: var(--gray7);
+  background-color: var(--reference-0);
+}
+
+.button.selected {
+  cursor: default;
+  color: var(--reference-0);
+  background-color: var(--reference-1);
 }
