--- a/frontend/components/LinePatternPathTimetable/LinePatternPathTimetable.module.css
+++ b/frontend/components/LinePatternPathTimetable/LinePatternPathTimetable.module.css
@@ -25,8 +25,8 @@
   align-items: center;
   justify-content: center;
   font-size: 15px;
-  padding: 7px 10px;
-  min-width: 35px;
+  padding: 7px 6px;
+  /* min-width: 10px; */
   line-height: 1;
 }
 
@@ -38,7 +38,7 @@
 
 .column:last-child .hour,
 .column:last-child .minute {
-  padding-right: 20px;
+  padding-right: 15px;
 }
 
 /* * */
