--- a/frontend/styles/colors.css
+++ b/frontend/styles/colors.css
@@ -8,6 +8,31 @@
   --realtime-75: rgba(0, 215, 50, 0.75);
   --realtime-100: rgba(0, 205, 50, 1);
 
+  /* GRAYS */
+  --gray-0: #ffffff;
+  --gray-1: #f9f9f9;
+  --gray-2: #e6e6e6;
+  --gray-3: #b9b9b9;
+  --gray-4: #969696;
+  --gray-5: #787878;
+  --gray-6: #5a5a5a;
+  --gray-7: #000000;
+
+  /* * */
+  /* * */
+  /* * */
+  /* * */
+  /* * */
+  /* * */
+  /* * */
+  /* * */
+  /* * */
+  /* * */
+  /* * */
+
+  /* * */
+  /* OLD COLORS BELLOW */
+
   /* ACCENT */
   --primary1: #ffffc8;
   --primary2: #ffff8c;
