--- a/frontend/components/StopName/StopName.module.css
+++ b/frontend/components/StopName/StopName.module.css
@@ -1,10 +1,17 @@
-.text {
-  font-size: 20px;
-  line-height: 1.2;
-  font-weight: 600;
-  color: var(--reference-1);
+.container {
+  display: flex;
+  flex-direction: column;
+  gap: var(--size-xs);
 }
 
-.text.lg {
-  font-size: 25px;
+.container.flex-start {
+  align-items: flex-start;
+}
+
+.container.center {
+  align-items: center;
+}
+
+.container.flex-end {
+  align-items: flex-end;
 }
