--- a/frontend/components/StopTimetable/StopTimetable.module.css
+++ b/frontend/components/StopTimetable/StopTimetable.module.css
@@ -126,12 +126,6 @@
   color: var(--gray8);
 }
 
-.localitiesPerLine {
-  font-size: 12px;
-  font-weight: 600;
-  color: var(--gray6);
-}
-
 /* * */
 /* TRIP ADDITIONAL INFO */
 
@@ -144,4 +138,30 @@
   display: flex;
   flex-direction: column;
   border-top: 1px solid var(--gray2);
+}
+
+.localitiesPerLine {
+  font-size: 12px;
+  font-weight: 600;
+  color: var(--gray6);
+  max-width: 600px;
+  overflow: hidden;
+}
+
+.localities,
+.localities div {
+  display: flex;
+  flex-direction: row;
+  gap: var(--size-xs);
+  align-items: center;
+  justify-content: flex-start;
+  max-width: 600px;
+  overflow: hidden;
+}
+
+.localities p {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  max-width: 600px;
+  overflow: hidden;
 }
