--- a/frontend/styles/colors.css
+++ b/frontend/styles/colors.css
@@ -173,7 +173,7 @@
 }
 
 @media (prefers-color-scheme: dark) {
-  .root {
+  .non-root {
     /* TRANSPARENTS */
     --gray0-15: rgba(0, 0, 0, 0.15);
     --gray0-25: rgba(0, 0, 0, 0.25);
