--- a/frontend/components/StopsExplorer/StopsExplorer.module.css
+++ b/frontend/components/StopsExplorer/StopsExplorer.module.css
@@ -8,6 +8,6 @@
 @media (max-width: 900px) {
   .mapAndTimetable {
     grid-template-columns: 1fr;
-    grid-template-rows: 400px auto;
+    grid-template-rows: 400px minmax(100px, auto);
   }
 }
