--- a/frontend/components/StopsExplorerTimetable/StopsExplorerTimetable.module.css
+++ b/frontend/components/StopsExplorerTimetable/StopsExplorerTimetable.module.css
@@ -1,3 +1,12 @@
 .container {
   overflow-y: auto;
+  border-left: 1px solid var(--gray3);
+  display: flex;
+  flex-direction: column;
+}
+
+@media (max-width: 900px) {
+  .container {
+    border: none;
+  }
 }
