--- a/frontend/components/HelpdesksExplorer/HelpdesksExplorer.module.css
+++ b/frontend/components/HelpdesksExplorer/HelpdesksExplorer.module.css
@@ -5,7 +5,7 @@
   width: 100%;
 }
 
-.availableStores {
+.availableHelpdesk {
   display: grid;
   grid-template-columns: 1fr 1fr;
   width: 100%;
@@ -14,7 +14,7 @@
 }
 
 @media (max-width: 800px) {
-  .availableStores {
+  .availableHelpdesk {
     grid-template-columns: 1fr;
   }
 }
