--- a/frontend/components/StopsExplorer/StopsExplorer.module.css
+++ b/frontend/components/StopsExplorer/StopsExplorer.module.css
@@ -1,4 +1,7 @@
-.mapAndTimetable {
+/* * */
+/* CONTAINER */
+
+.container {
   display: grid;
   grid-template-columns: 1fr 400px;
   grid-template-rows: 600px;
@@ -6,8 +9,24 @@
 }
 
 @media (max-width: 900px) {
-  .mapAndTimetable {
+  .container {
     grid-template-columns: 1fr;
     grid-template-rows: 400px minmax(100px, auto);
+  }
+}
+
+/* * */
+/* SIDEBAR */
+
+.sidebar {
+  overflow-y: auto;
+  border-left: 1px solid var(--gray3);
+  display: flex;
+  flex-direction: column;
+}
+
+@media (max-width: 900px) {
+  .sidebar {
+    border: none;
   }
 }
