--- a/frontend/components/StopsExplorerToolbar/StopsExplorerToolbar.module.css
+++ b/frontend/components/StopsExplorerToolbar/StopsExplorerToolbar.module.css
@@ -1,16 +1,23 @@
+/* * */
+/* CONTAINER */
+
 .container {
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: auto auto auto 1fr;
+  grid-template-rows: auto;
   gap: var(--size-md);
   padding: var(--size-sm);
   align-items: center;
   justify-content: flex-start;
 }
 
-.elementWrapper {
-  width: auto;
-}
-
-.fullWidth {
-  width: 100%;
+@media (max-width: 700px) {
+  .container {
+    grid-template-columns: 1fr auto auto;
+    grid-template-rows: auto auto;
+    gap: var(--size-sm);
+  }
+  .fullWidth {
+    grid-column: 1/4;
+  }
 }
