--- a/frontend/styles/reset.css
+++ b/frontend/styles/reset.css
@@ -23,7 +23,6 @@ a {
 * {
   box-sizing: border-box;
   user-select: none;
-  -webkit-user-select: none;
   -webkit-touch-callout: none;
   font-family: inter, sans-serif;
 }
@@ -31,5 +30,5 @@ a {
 input,
 textarea {
   user-select: text;
-  -webkit-user-select: text;
+  -webkit-touch-callout: default;
 }
