--- a/frontend/components/HelpdesksExplorerItem/HelpdesksExplorerItem.module.css
+++ b/frontend/components/HelpdesksExplorerItem/HelpdesksExplorerItem.module.css
@@ -4,10 +4,11 @@
   justify-content: flex-start;
   gap: var(--size-md);
   padding: var(--size-md);
+  border-radius: 5px;
 }
 
 .container:hover {
-  background-color: var(--gray2);
+  background-color: var(--gray0);
 }
 
 .title {
