--- a/frontend/components/AppFooter/AppFooter.module.css
+++ b/frontend/components/AppFooter/AppFooter.module.css
@@ -6,6 +6,13 @@
   background: #000000;
   padding: 60px 30px;
   flex-direction: column;
+  gap: 50px;
+}
+
+@media (max-width: 900px) {
+  .container {
+    gap: 30px;
+  }
 }
 
 /* * */
@@ -13,5 +20,11 @@
 
 .grid {
   display: grid;
-  grid-template-columns: 200px 1fr;
+  grid-template-columns: 400px 1fr;
+}
+
+@media (max-width: 900px) {
+  .grid {
+    grid-template-columns: 1fr;
+  }
 }
