--- a/frontend/components/Pannel/Pannel.module.css
+++ b/frontend/components/Pannel/Pannel.module.css
@@ -21,7 +21,8 @@
   }
 }
 
-.headerLeftSection {
+.headerLeftSection,
+.headerRightSection {
   display: flex;
   align-items: center;
   gap: var(--size-md);
