--- a/frontend/components/StopsExplorer/StopsExplorer.module.css
+++ b/frontend/components/StopsExplorer/StopsExplorer.module.css
@@ -30,3 +30,18 @@
     border: none;
   }
 }
+
+/* * */
+/* BETA ICON */
+
+.betaIcon {
+  font-size: 14px;
+  font-weight: 800;
+  line-height: 1;
+  text-transform: uppercase;
+  color: #ffffff;
+  padding: 3px 4px;
+  border: 2px solid #ffffff;
+  border-radius: 3px;
+  opacity: 0.9;
+}
