--- a/frontend/components/StopsExplorerTimetableHeader/StopsExplorerTimetableHeader.module.css
+++ b/frontend/components/StopsExplorerTimetableHeader/StopsExplorerTimetableHeader.module.css
@@ -3,7 +3,7 @@
 
 .container {
   display: grid;
-  grid-template-columns: 1fr 100px;
+  grid-template-columns: 75px 1fr 100px;
   gap: 2px;
 }
 
@@ -25,8 +25,7 @@
 .column:first-child {
   border-top-left-radius: 999px;
   border-bottom-left-radius: 999px;
-  justify-content: flex-start;
-  padding-left: var(--size-md);
+  padding-left: 12px;
 }
 
 .column:last-child {
