--- a/frontend/components/Layouts/Layouts.module.css
+++ b/frontend/components/Layouts/Layouts.module.css
@@ -14,9 +14,10 @@
   padding: 0 var(--size-lg);
 }
 
-@media (max-width: 600px) {
+@media (max-width: 700px) {
   .baseLayout {
     padding: 0;
+    margin: 0;
   }
 }
 
