--- a/frontend/components/Pannel/Pannel.module.css
+++ b/frontend/components/Pannel/Pannel.module.css
@@ -1,6 +1,12 @@
+/* * */
+/* CONTAINER */
+
 .container {
   overflow: hidden;
 }
+
+/* * */
+/* HEADER */
 
 .header {
   display: flex;
@@ -8,18 +14,21 @@
   align-items: center;
   background: #000000;
   color: #ffffff;
-  padding: var(--size-md) var(--size-lg);
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px;
+  padding: 15px 18px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
   overflow: hidden;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 700px) {
   .header {
     border-radius: 0px;
     padding: var(--size-md);
   }
 }
+
+/* * */
+/* HEADER LEFT & RIGHT SECTIONS */
 
 .headerLeftSection,
 .headerRightSection {
@@ -28,20 +37,29 @@
   gap: var(--size-md);
 }
 
+/* * */
+/* HEADER ICON */
+
 .headerIcon {
   display: flex;
 }
+
+/* * */
+/* HEADER TITLE */
 
 .headerTitle {
   font-size: 20px;
   line-height: 1.3;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 700px) {
   .headerTitle {
     font-size: 18px;
   }
 }
+
+/* * */
+/* WRAPPER */
 
 .wrapper {
   overflow: hidden;
@@ -51,6 +69,16 @@
   border-bottom-right-radius: 15px;
   background-color: var(--reference-0);
 }
+
+@media (max-width: 700px) {
+  .wrapper {
+    border-radius: 0px;
+    border: none;
+  }
+}
+
+/* * */
+/* LOADING / ERROR */
 
 .isLoading,
 .isError {
