--- a/frontend/components/AppHeader/AppHeader.module.css
+++ b/frontend/components/AppHeader/AppHeader.module.css
@@ -10,6 +10,12 @@
   justify-content: space-between;
 }
 
+@media (max-width: 700px) {
+  .container {
+    padding: 30px;
+  }
+}
+
 /* * */
 /* NAVIGATION > MENUS */
 
@@ -21,9 +27,21 @@
   gap: var(--size-lg);
 }
 
+@media (max-width: 700px) {
+  .navigation_menus {
+    display: none;
+  }
+}
+
 /* * */
 /* NAVIGATION > DRAWER */
 
 .navigation_drawer {
   display: none;
+}
+
+@media (max-width: 700px) {
+  .navigation_drawer {
+    display: flex;
+  }
 }
